--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/mf222/taller-git-2021-1/issues"
   },
-  "homepage": "https://github.com/mf222/taller-git-2021-1#readme"
+  "homepage": "https://github.com/mf222/taller-git-2021-1#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "yargs": "^17.0.1"
+  }
 }
